src/objects/srpFieldHistory__c.object
<CustomObject>
    <description>Used for storing history of changes by object and field.</description>
    <fields>
        <fullName>action__c</fullName>
        <description>Should be either Updated or Deleted.</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>changedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User that made the change</description>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SRP_Field_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>conversionErrorCount__c</fullName>
        <description>Stores the number of times this record has been attempted to convert to Big Object.</description>
        <label>Conversion Error Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fieldLabel__c</fullName>
        <description>Stores the field Label at time of history item creation.</description>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldName__c</fullName>
        <description>Name of the field on the related Record that was changed.</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isReference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if the field history is actually a reference value to another field.  If this is true, oldId and newId fields should be populated.</description>
        <label>Is Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lastConversionErrorFields__c</fullName>
        <description>Stores the fields returned by the last conversion error.</description>
        <label>Last Conversion Error Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lastConversionErrorMessage__c</fullName>
        <description>Stores the message of the last conversion error.</description>
        <label>Last Conversion Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lastConversionErrorStatus__c</fullName>
        <description>Stores the status code of the last conversion error.</description>
        <label>Last Conversion Error Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newId__c</fullName>
        <description>Used to store the new Id value of the referenced object.</description>
        <label>New Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newValue__c</fullName>
        <description>The value of the field after change</description>
        <label>New Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>oldId__c</fullName>
        <description>Used to store the previous Id of the related object.</description>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldValue__c</fullName>
        <description>The value of the field before the change</description>
        <label>Old Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>recordId__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordName__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referenceSObjectType__c</fullName>
        <description>If history is for a reference field, store the type of the object that has changed.</description>
        <label>Reference SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObjectName__c</fullName>
        <label>SObject Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SRP Field History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>sObjectName__c</columns>
        <columns>recordId__c</columns>
        <columns>action__c</columns>
        <columns>changedBy__c</columns>
        <columns>fieldLabel__c</columns>
        <columns>oldValue__c</columns>
        <columns>newValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SRP Field History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SRP Field Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>